--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,8 @@ on:
       - '*.*.*-alpha.*'
       - '*.*.*-beta.*'
       - '*.*.*-rc.*'
-      - '*.*.*'            # final sürümler
+      - '*.*.*-*'      # özel suffix release’ler (-colors gibi)
+      - '*.*.*'        # final
 
 jobs:
   build-release:
